@@ -1,5 +1,5 @@
 apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'com.github.hierynomus.license'
 
 description = "H2O Application Assembly"
@@ -10,32 +10,35 @@ targetCompatibility = 1.8
 
 // Exclude unwanted dependencies
 configurations {
-    compile.exclude module: 'junit'
-    compile.exclude module: 'mockito-all'
-    compile.exclude module: 'zookeeper'
-    compile.exclude module: 'javax.mail.glassfish'
-    compile.exclude module: 'servlet-api'
-    compile.exclude group: 'org.mortbay.jetty' // exclude the whole group, nothing good in there
+    api.exclude module: 'junit'
+    api.exclude module: 'mockito-all'
+    api.exclude module: 'zookeeper'
+    api.exclude module: 'javax.mail.glassfish'
+    api.exclude module: 'servlet-api'
+    api.exclude group: 'org.mortbay.jetty' // exclude the whole group, nothing good in there
+    api.exclude group: 'org.openjdk.jmh'
+    api.exclude group: 'log4j'
+    api.exclude module: 'h2o-logging-impl-classic'
 }
 
 // Dependencies
 dependencies {
-    compile project(":h2o-app")
-    runtime project(":${defaultWebserverModule}")
-    compile project(":h2o-web")
-    compile project(":h2o-avro-parser")
-    compile project(":h2o-persist-gcs")
-    compile project(":h2o-persist-s3")
-    compile project(":h2o-persist-http")
-    compile project(":h2o-persist-hdfs")
-    compile project(":h2o-ext-krbstandalone")
-    compile project(":h2o-ext-mojo-pipeline")
+    api project(":h2o-app")
+    api project(":h2o-logging-impl-log4j2")
+    runtimeOnly project(":${defaultWebserverModule}")
+    api project(":h2o-web")
+    api project(":h2o-avro-parser")
+    api project(":h2o-persist-gcs")
+    api project(":h2o-persist-s3")
+    api project(":h2o-persist-http")
+    api project(":h2o-persist-hdfs")
+    api project(":h2o-ext-krbstandalone")
+    api project(":h2o-ext-mojo-pipeline")
     if (project.hasProperty("doIncludeOrc") && project.doIncludeOrc == "true") {
-        compile project(":h2o-orc-parser")
+        api project(":h2o-orc-parser")
     }
-    compile project(":h2o-parquet-parser")
-    compile project(":h2o-k8s")
-    compile "org.slf4j:slf4j-log4j12:1.7.10"
+    api project(":h2o-parquet-parser")
+    api project(":h2o-k8s-int")
 }
 
 jar {
@@ -81,11 +84,14 @@ shadowJar {
   exclude 'devpay_products.properties'
   manifest {
     attributes 'Main-Class': 'water.H2OApp'
+    attributes 'Add-Opens': 'java.base/java.lang java.base/java.util java.base/java.lang.reflect'
+    attributes 'Multi-Release': 'true'
   }
   transform(com.github.jengelman.gradle.plugins.shadow.transformers.IncludeResourceTransformer.class) {
     file = file("${buildDir}/reports/license/dependency-license.xml")
     resource = "META-INF/license/h2o-depenencies-licenses.xml"
   }
+  transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
 }
 
 artifacts {
@@ -93,7 +99,7 @@ artifacts {
 }
 
 //
-// Support make infrastructure by copying the resulting assembly into parent
+// Copying the resulting assembly into parent for convenient scripting
 // project build directory
 //
 
